# rexent-core

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml
jobs/cron-movie-fetcher/: Cargo.toml
jobs/cron-movie-fetcher/.cargo/: config.toml
jobs/cron-movie-fetcher/src/: main.rs
jobs/cron-showtime-crawler/: Cargo.toml
jobs/cron-showtime-crawler/.cargo/: config.toml
jobs/cron-showtime-crawler/src/: main.rs
lib/api-error/: Cargo.toml
lib/api-error/src/: error.rs  lib.rs
lib/auth/: Cargo.toml
lib/auth/src/: claims.rs  lib.rs  route.rs  routes_collection.rs  token_validator.rs  utils.rs
lib/auth/src/http/: auth_middleware.rs  authentication.rs  mod.rs
lib/db-connector/: Cargo.toml
lib/db-connector/src/: lib.rs  mongo.rs  mongo_repository.rs  postgres.rs
lib/http-client/: Cargo.toml
lib/http-client/src/: http_client.rs
lib/movie-fetcher/: Cargo.toml
lib/movie-fetcher/.cargo/: config.toml
lib/movie-fetcher/src/: fetcher.rs  lib.rs
lib/movie-fetcher/src/models/: country_movies.rs  mod.rs
lib/movie-reco-client/: Cargo.toml
lib/movie-reco-client/.cargo/: config.toml
lib/movie-reco-client/src/: lib.rs  movie_reco_client.rs
lib/movie-reco-client/src/models/: models.rs
lib/tmdb-client/: Cargo.toml
lib/tmdb-client/src/: config.rs  lib.rs  tmdb_client.rs  url_builder.rs
lib/tmdb-client/src/models/: mod.rs  movie.rs  now_playing.rs
lib/weatherapi-client/: Cargo.toml
lib/weatherapi-client/.cargo/: config.toml
lib/weatherapi-client/src/: client.rs
lib/weatherapi-client/src/models/: weather.rs
service-protos/: Cargo.toml  build.rs
service-protos/proto/: context.proto  events.proto  favorites.proto  location.proto  movie.proto  reco.proto  search.proto  users.proto
service-protos/src/: lib.rs
service-protos/src/clients/: context.rs  events.rs  favorites.rs  location.rs  reco.rs  search.rs  users.rs
service-protos/src/services/: context.rs  events.rs  favorites.rs  location.rs  mod.rs  movie.rs  reco.rs  search.rs  users.rs
services/context/: Cargo.toml  Dockerfile
services/context/.cargo/: config.toml
services/context/src/: main.rs
services/context/src/clients/: redis_client.rs
services/context/src/models/: context.rs  mappers.rs
services/context/src/services/: context_grpc.rs  context_impl.rs  data_collector.rs  mod.rs
services/events/: Cargo.toml
services/events/.cargo/: config.toml
services/events/src/: main.rs
services/events/src/models/: mappers.rs
services/events/src/services/: events_grpc.rs  events_service.rs  mod.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/.cargo/: config.toml
services/gateway/src/: grpc_factory.rs  main.rs  routes.rs
services/gateway/src/api/: context.rs  events.rs  favorites.rs  location.rs  reco.rs  search.rs  users.rs
services/gateway/src/middleware/: state.rs
services/gateway/src/models/: context.rs  events.rs  favorites.rs  location.rs  mod.rs  reco.rs  search.rs  users.rs
services/location/: .env  Cargo.toml  Dockerfile
services/location/.cargo/: config.toml
services/location/migrations/2023-08-08-221413_init/: down.sql  up.sql
services/location/src/: main.rs  schema.rs
services/location/src/aws/: sqs.rs
services/location/src/clients/: geocode.rs  geolocation.rs  mod.rs
services/location/src/models/: city.rs  country.rs  location.rs  mod.rs
services/location/src/services/: city.rs  country.rs  location_crud.rs  location_grpc.rs  location_service.rs  location_service_impl.rs  mod.rs
services/location/src/utils/: db.rs
services/reco/: Cargo.toml  Dockerfile
services/reco/.cargo/: config.toml
services/reco/migrations/2023-09-20-212746_reco_tables/: down.sql  up.sql
services/reco/src/: main.rs  schema.rs
services/reco/src/models/: mappers.rs  mod.rs  threshold.rs  user.rs
services/reco/src/recommender/: movie.rs
services/reco/src/services/: mod.rs  reco_impl.rs  user_reco_crud.rs
services/reco/src/storage/: movie.rs
services/reco/src/utils/: db.rs
services/search/: Cargo.toml  Dockerfile
services/search/.cargo/: config.toml
services/search/src/: main.rs
services/search/src/models/: mappers.rs  models.rs
services/search/src/services/: mod.rs  search_grpc.rs  search_service.rs
services/users/: .env  Cargo.toml  Dockerfile
services/users/.cargo/: config.toml
services/users/migrations/2023-08-07-215304_init/: down.sql  up.sql
services/users/migrations/2023-10-16-201641_user_social/: down.sql  up.sql
services/users/src/: main.rs  schema.rs
services/users/src/models/: movies.rs  users.rs
services/users/src/services/: favorites_service.rs  mod.rs  users_service.rs
services/users/src/utils/: hasher.rs  mod.rs  token.rs
tools/data-import/: Cargo.toml
tools/data-import/.cargo/: config.toml
tools/data-import/src/: aws_client.rs  main.rs  movie_csv_migrator.rs
tools/data-import/src/models/: models.rs
tools/data-seed/: Cargo.toml
tools/data-seed/.cargo/: config.toml
tools/data-seed/src/: main.rs  users.rs
tools/events-crawler/: Cargo.toml
tools/events-crawler/src/: crawler.rs  event_processor.rs  lib.rs
tools/events-crawler/src/clients/: mod.rs  serp_api.rs
tools/events-crawler/src/models/: loc_showtimes.rs  location.rs  mod.rs  showtime.rs
