[package]
name = "service-protos"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11"
tokio = { version = "1.28.2", features = ["full"] }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.1"
