[package]
name = "cron-showtime-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
tokio = "1.28.1"

events_crawler = { path = "../../tools/events-crawler", package = "events-crawler" }
proto = { path = "../../service-protos", package = "service-protos" }
