[package]
name = "api-error"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3" }
diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }
bcrypt = { version = "0.14.0" }
jsonwebtoken = { version = "8.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tonic = "0.9.2"
prost = "0.11.9"