[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3" }
jsonwebtoken = { version = "8.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3" }
once_cell = "1.17.2"
tonic = "0.9.2"

api_error = { path = "../api-error", package = "api-error" }
