[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
tokio = { version = "1.28.2", features = ["full"] }

api_error = { path = "../api-error", package = "api-error" }
