[package]
name = "tmdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
tokio = { version = "1.28.1", features = ["full"] }

http_client = { path = "../http-client", package = "http-client" }
api_error = { path = "../api-error", package = "api-error" }
