[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = { version = "8.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11"
tokio = { version = "1.28.2", features = ["full"] }
chrono-tz = "0.8.2"
redis = "0.23.0"
futures = { version = "0.3" }

proto = { path = "../../service-protos", package = "service-protos" }
weatherapi = { path = "../../lib/weatherapi-client", package = "weatherapi-client" }
