[package]
name = "location"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3" }
diesel = { version = "2.0.4", features = [
    "r2d2",
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "numeric",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
futures = { version = "0.3" }
convert_case = { version = "0.6.0" }
aws-config = "0.56.0"
aws-sdk-sqs = "0.29.0"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }

http_client = { path = "../../lib/http-client", package = "http-client" }
api_error = { path = "../../lib/api-error", package = "api-error" }
proto = { path = "../../service-protos", package = "service-protos" }

[build-dependencies]
tonic-build = "0.9.2"
