[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.5.0"
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11"

db = { path = "../../lib/db-connector", package = "db-connector" }
proto = { path = "../../service-protos", package = "service-protos" }
