[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = [
    "r2d2",
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
] }
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
bcrypt = { version = "0.14.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = { version = "8.3" }

api_error = { path = "../../lib/api-error", package = "api-error" }
auth = { path = "../../lib/auth" }
proto = { path = "../../service-protos", package = "service-protos" }

[build-dependencies]
tonic-build = "0.9.2"
