[package]
name = "data-seed"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
uuid = "1.4.1"
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.73"

proto = { path = "../../service-protos", package = "service-protos" }
gateway = { path = "../../services/gateway", package = "gateway" }